Commit 22: now hopefully last push

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,9 @@ div.dropdown-menu.show{
 
 /* Carousel base class */
 
+#animatedBanner{
+    overflow: hidden;
+}
 
 .carousel {
     margin-bottom: 4rem;
