--- a/css/styles.css
+++ b/css/styles.css
@@ -67,12 +67,28 @@ div.dropdown-menu.show{
     }
 
     .navbar{
-        height: 70px;
+        height: 45px;
     }
 
-    .navbar-shrink{
-        height: 3em;
-        width: 3em;
+    #navTransparent{
+        padding-bottom: 10px;
+    }
+
+    .navbar-toggler-icon{
+        height: 20px;
+        width: 20px;
+        margin-left: 10px;
+        
+    }
+
+    .navbar-toggler{
+        height: 50px;
+        width: 50px;
+    }
+
+    #navbar-brandimg{
+        height: 35px;
+        width: 35px;
     }
 
     div.dropdown-menu.show{
